football_scotland/airflow/logs/dag_id=intialization_database/run_id=manual__2024-10-01T151623.075506+0000/task_id=copy_data_to_staging_table_fl/attempt=1.log
[2024-10-01T15:17:12.365+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-10-01T15:17:12.390+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: intialization_database.copy_data_to_staging_table_fl manual__2024-10-01T15:16:23.075506+00:00 [queued]>
[2024-10-01T15:17:12.400+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: intialization_database.copy_data_to_staging_table_fl manual__2024-10-01T15:16:23.075506+00:00 [queued]>
[2024-10-01T15:17:12.401+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-10-01T15:17:12.416+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): copy_data_to_staging_table_fl> on 2024-10-01 15:16:23.075506+00:00
[2024-10-01T15:17:12.424+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=3979) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-10-01T15:17:12.426+0000] {standard_task_runner.py:63} INFO - Started process 3981 to run task
[2024-10-01T15:17:12.427+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'intialization_database', 'copy_data_to_staging_table_fl', 'manual__2024-10-01T15:16:23.075506+00:00', '--job-id', '3014', '--raw', '--subdir', 'DAGS_FOLDER/initialization.py', '--cfg-path', '/tmp/tmpgffslwpe']
[2024-10-01T15:17:12.429+0000] {standard_task_runner.py:91} INFO - Job 3014: Subtask copy_data_to_staging_table_fl
[2024-10-01T15:17:12.504+0000] {task_command.py:426} INFO - Running <TaskInstance: intialization_database.copy_data_to_staging_table_fl manual__2024-10-01T15:16:23.075506+00:00 [running]> on host f8103d9b7858
[2024-10-01T15:17:12.618+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='intialization_database' AIRFLOW_CTX_TASK_ID='copy_data_to_staging_table_fl' AIRFLOW_CTX_EXECUTION_DATE='2024-10-01T15:16:23.075506+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-01T15:16:23.075506+00:00'
[2024-10-01T15:17:12.620+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-10-01T15:17:12.621+0000] {sql.py:276} INFO - Executing: \copy scottish_premiership.staging_table_fl
FROM '/opt/***/dags/csvs/first_load_csvs/all_sources_merged_transformed.csv'
DELIMITER ','
CSV HEADER;
[2024-10-01T15:17:12.632+0000] {base.py:84} INFO - Using connection ID 'football_scotland_connection' for task execution.
[2024-10-01T15:17:12.643+0000] {base.py:84} INFO - Using connection ID 'football_scotland_connection' for task execution.
[2024-10-01T15:17:12.648+0000] {sql.py:487} INFO - Running statement: \copy scottish_premiership.staging_table_fl
FROM '/opt/***/dags/csvs/first_load_csvs/all_sources_merged_transformed.csv'
DELIMITER ','
CSV HEADER;, parameters: None
[2024-10-01T15:17:12.649+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-10-01T15:17:12.650+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "\"
LINE 1: \copy scottish_premiership.staging_table_fl
        ^

[2024-10-01T15:17:12.660+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=intialization_database, task_id=copy_data_to_staging_table_fl, run_id=manual__2024-10-01T15:16:23.075506+00:00, execution_date=20241001T151623, start_date=20241001T151712, end_date=20241001T151712
[2024-10-01T15:17:12.674+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 3014 for task copy_data_to_staging_table_fl (syntax error at or near "\"
LINE 1: \copy scottish_premiership.staging_table_fl
        ^
; 3981)
[2024-10-01T15:17:12.723+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-10-01T15:17:12.739+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-10-01T15:17:12.741+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
